// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`unassign operation 1`] = `
{
  "data": {
    "unassign": {
      "__typename": "UnassignmentPayload",
      "entity": {
        "__typename": "Checklist",
        "assignees": {
          "__typename": "AssigneeConnection",
          "edges": [],
        },
      },
      "unassignedFrom": {
        "__typename": "Worker",
        "displayName": "Will Ruggiano",
      },
    },
  },
}
`;

exports[`unassign conflict 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Entity already (un)assigned],
  ],
}
`;

exports[`unassign not assignable entity 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Entity cannot be (un)assigned],
  ],
}
`;

exports[`unassign not assignable from 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Entity cannot be (un)assigned],
  ],
}
`;

exports[`unassign idempotent 1`] = `
{
  "data": {
    "unassign": {
      "__typename": "UnassignmentPayload",
      "entity": {
        "__typename": "Checklist",
        "assignees": {
          "__typename": "AssigneeConnection",
          "edges": [],
        },
      },
      "unassignedFrom": {
        "__typename": "Worker",
        "displayName": "Will Ruggiano",
      },
    },
  },
}
`;
